# backend/swagger/v1/swagger.yaml
@@ -162,6 +162,43 @@ paths:
               - plate_no
               - accessway_id
               - parking_lot_id
+  "/api/v1/parking_lots/{parking_lot_id}/unpark":
+    post:
+      summary: Unpark a Vehicle
+      tags:
+      - Parking Lot
+      parameters:
+      - name: parking_lot_id
+        in: path
+        required: true
+        description: ID of the parking_lot
+        schema:
+          type: string
+      responses:
+        '200':
+          description: parking_lot found
+        '404':
+          description: parking_lot not found
+        '401':
+          description: unauthorized
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ticket_id:
+                  type: number
+              required:
+              - ticket_id
+          application/xml:
+            schema:
+              type: object
+              properties:
+                parking_lot_id:
+                  type: number
+              required:
+              - ticket_id
 servers:
 - url: http://{defaultHost}
   variables:
